1998-10-14  Olaf Bachmann  <obachman@mathematik.uni-kl.de>

	* MP_TcpTransp.c: added MP_KillLink, -MPrsh option to MP_OpenLink

	* MP_Util.c: Added IMP_StrDup function

1998-04-16  Olaf Bachmann  <obachman@mathematik.uni-kl.de>

	* MP_Util.c (IMP_GetCmdlineArg): Allow long option names

	* MP_TcpTransp.c (open_tcp_launch_mode): When long option names
	were used for specification of MPapplication, use long option
	names for MP options which are appended to application. 

Mon Jun 30 17:46:17 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* if no -MPhost spec is given, use env->thishost as default

	* got rid of RSH_N and
	  RSH_HOST --- $rsh hostname -n command seems to work everywhere

	* MP_TcpTransp.c (open_tcp_launch_mode): incoporated
	  MP_RSH_COMMAND which is set by configure; 

Wed Jun 25 09:04:25 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* MP_Env.c: extern "C" wrapper for includes sys/stat.h 

	* MP_Put.c: changed bool identifier to mbool to avaoid clashes
	  when compiling with g++

Fri Jun 20 11:24:18 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* MP_Link.c: MP_SetLinkOptions: case MP_LINK_LOG_MASK_OPT,
	  assigned oldval

Fri Jun  6 15:55:04 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

        * MP_Env.c: Used RawMem function for allocation of
          env->logfilename

Tue May 27 13:57:13 1997  Olaf Bachmann  <obachman@ratchwu>

	* MP_TcpTransp.h: Added fork mode to MPtcp links

Tue May 27 13:57:13 1997  Olaf Bachmann  <obachman@ratchwu>

        * MP_TcpTransp.[h,c]: Added fork mode to MPtcp links

Tue May 20 17:38:53 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* Makefile.in (target MP.h): explicitely user perl to call makeheaders

Sat May  3 19:55:06 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>
