@@ -1651,6 +1651,13 @@ EXTERN char* IMP_PariBigIntToStr _ANSI_ARGS_((MP_ApInt_t pari_number,
                                               char *buffer));
 EXTERN long IMP_PariBigIntAsciiSize _ANSI_ARGS_((MP_ApInt_t mp_number));
 
+/* Memory mamagment for Pari BigInts:
+   By default, the following functions are simple cgeti and empty;
+   You can reset this at run-time to whatever fits your needs 
+*/
+EXTERN GEN (*IMP_AllocCgeti) _ANSI_ARGS_((long));
+EXTERN void (*IMP_FreeCgeti) _ANSI_ARGS_((GEN));
+
 #ifdef HAVE_GMP_PARI_CONVERSIONS
 #include "gmp.h"
 EXTERN mpz_ptr _pari_to_gmp(GEN pnum, mpz_ptr *gnum_ptr);
